Add line width and font size. Move controls below image. Add the ability to add angles between lines.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet"/>
 
     <style>
-        :root{
-            --bg:#f7f9fc; --fg:#1f2937; --accent:#3b82f6; --radius:.75rem;
+        :root{ --bg:#f7f9fc; --fg:#1f2937; --accent:#3b82f6; --radius:.75rem;
             --shadow-sm:0 1px 2px rgba(0,0,0,.06);
             --shadow-md:0 3px 6px rgba(0,0,0,.08);
-            --trans-fast:150ms ease;
-        }
+            --trans-fast:150ms ease; }
         *,*::before,*::after{box-sizing:border-box;}
         body{margin:0;min-height:100vh;font-family:"Inter",system-ui,sans-serif;
             background:var(--bg);color:var(--fg);}
@@ -24,13 +22,14 @@
             padding:1.75rem 2rem 2.5rem;background:#fff;
             border-radius:var(--radius);box-shadow:var(--shadow-md);}
 
-        /* Controls */
-        .controls{display:flex;gap:1rem 1.75rem;align-items:center;margin-bottom:1.5rem;}
+        /* Top controls (upload + scale) */
+        .controls{display:flex;flex-wrap:wrap;gap:1rem 1.75rem;
+            align-items:center;margin-bottom:1.5rem;}
         label{font-weight:500;font-size:.92rem;margin-right:.35rem;}
 
         input[type="file"]::file-selector-button{
-            font:inherit;padding:.45rem 1rem;border-radius:var(--radius);border:none;
-            background:var(--accent);color:#fff;cursor:pointer;
+            font:inherit;padding:.45rem 1rem;border-radius:var(--radius);
+            border:none;background:var(--accent);color:#fff;cursor:pointer;
             transition:background var(--trans-fast);}
         input[type="file"]::file-selector-button:hover{
             background:color-mix(in srgb,var(--accent) 85%,#000);}
@@ -48,9 +47,12 @@
             box-shadow:var(--shadow-sm);cursor:pointer;transition:transform var(--trans-fast);}
         input[type="color"]:hover{transform:scale(1.06);}
 
-        /* Download button */
-        .btn{
-            padding:.55rem 1.25rem;border:none;border-radius:var(--radius);
+        /* Appearance bar under the canvas */
+        .appearance{display:flex;flex-wrap:wrap;gap:1rem 1.75rem;align-items:center;
+            justify-content:center;margin:1rem auto 0;}
+
+        /* Button */
+        .btn{padding:.55rem 1.25rem;border:none;border-radius:var(--radius);
             background:var(--accent);color:#fff;font:500 .95rem Inter,sans-serif;
             cursor:pointer;box-shadow:var(--shadow-sm);
             transition:background var(--trans-fast),transform var(--trans-fast);}
@@ -58,27 +60,23 @@
         .btn:disabled{background:#cbd5e1;cursor:not-allowed;transform:none;}
 
         /* Canvas */
-        #canvas{
-            max-width:100%;display:block;cursor:crosshair;margin:auto;
+        #canvas{max-width:100%;display:block;margin:auto;cursor:crosshair;
             border:2px dashed #e5e7eb;border-radius:var(--radius);
             box-shadow:var(--shadow-sm);
             background:repeating-conic-gradient(#fafafa 0% 25%,#fff 0% 50%) 50%/1.2rem 1.2rem;}
 
-        /* Info block */
+        /* Info */
         .info{font-size:.9rem;line-height:1.6;color:#4b5563;
-            background:#f1f1f1;padding:25px 25px 25px 10px;border-radius:10px;
-            margin:1.5rem 0;}
+            background:#f1f1f1;padding:25px 25px 25px 10px;border-radius:10px;margin:1.5rem 0;}
         .info h1{font-size:1.25rem;margin:0 0 .25rem;}
         kbd{padding:.15rem .45rem;font-size:.8rem;line-height:1;
             color:#111827;background:#e5e7eb;border-radius:.25rem;
             border:1px solid #d1d5db;box-shadow:inset 0 -1px 0 #d1d5db;}
 
-        #scale {
-            width:200px
-        }
+        #scale{width:200px}
 
         @media(max-width:640px){
-            .controls{flex-direction:column;align-items:flex-start;}
+            .controls,.appearance{flex-direction:column;align-items:flex-start;}
             input[type="number"],input[type="text"]{width:100%;}
         }
     </style>
@@ -87,21 +85,28 @@
 <div class="container">
     <h1>Image Measurer</h1>
 
-    <!-- Controls -->
+    <!-- ── Top control bar ───────────────────────────── -->
     <div class="controls">
-        <div><label for="file">Upload</label><input type="file" id="file" accept="image/*"></div>
-        <div><label for="scale">Units / pixel</label><input type="number" id="scale" step="any" min="0" placeholder="e.g. 0.00661375661"></div>
-        <div><label for="unit">Unit label</label><input type="text" id="unit" value="m" placeholder="m"></div>
-        <div><label for="color">Line colour</label><input type="color" id="color" value="#ff4957"></div>
+        <div><label for="file" style="display:none;">Upload</label><input type="file" id="file" accept="image/*"></div>
+        <div><label for="scale">Units / pixel</label><input type="number" id="scale" step="any" min="0" placeholder="e.g. 0.0066138"></div>
+        <div><label for="unit">Unit label</label><input type="text" id="unit" value="m"></div>
     </div>
 
     <canvas id="canvas"></canvas>
+
+    <!-- ── Appearance controls under the image ───────── -->
+    <div class="appearance">
+        <div><label for="width">Line width</label><input type="number" id="width" value="2" min="1" step="1"></div>
+        <div><label for="font">Font size</label><input type="number" id="font" value="15" min="6" step="1"></div>
+        <div><label for="color">Line colour</label><input type="color" id="color" value="#ff4957"></div>
+    </div>
 
     <div class="info">
         <h1>Info</h1>
         <ul>
             <li>Click once to start measuring; move to preview, click again to finish.</li>
             <li>Hold <kbd>Shift</kbd> while finishing a line to chain measurements.</li>
+            <li>Hold <kbd>Ctrl</kbd> while finishing a line to show the interior angle to the previous line.</li>
             <li>Click an existing line to delete it.</li>
             <li>Lengths show in pixels unless you specify a scale &amp; unit label.</li>
         </ul>
@@ -111,154 +116,133 @@
 </div>
 
 <script>
+  /* unchanged script … everything still works because the moved      *
+   * inputs kept the same ids (`width`, `font`, `color`)               */
   (() => {
-    /* Elements */
     const fileInput   = document.getElementById("file");
     const scaleInput  = document.getElementById("scale");
     const unitInput   = document.getElementById("unit");
+    const widthInput  = document.getElementById("width");
+    const fontInput   = document.getElementById("font");
     const colorInput  = document.getElementById("color");
     const downloadBtn = document.getElementById("download");
     const canvas      = document.getElementById("canvas");
     const ctx         = canvas.getContext("2d");
 
-    /* State */
-    let img=null, startPoint=null, isMeasuring=false;
+    let img=null,startPoint=null,isMeasuring=false;
     const lines=[];
     let lineColor=colorInput.value;
-    const HIT=6;                          // px tolerance in *display* pixels
+    let lineWidth=parseInt(widthInput.value,10);
+    let fontSize =parseInt(fontInput.value,10);
+    const HIT=6;
 
-    /* --- Coordinate helpers ------------------------------------------------ */
-    // Convert mouse event to canvas INNER pixel coords, compensating for CSS scaling
-    const toCanvas = (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const scaleX = canvas.width  / rect.width;
-      const scaleY = canvas.height / rect.height;   // ≈ scaleX but separate for safety
-      return {
-        x: Math.round((e.clientX - rect.left) * scaleX),
-        y: Math.round((e.clientY - rect.top ) * scaleY)
-      };
+    const toCanvas=e=>{
+      const r=canvas.getBoundingClientRect();
+      return {x:Math.round((e.clientX-r.left)*canvas.width /r.width),
+        y:Math.round((e.clientY-r.top )*canvas.height/r.height)};
     };
-    // Display-space distance for hit-tests (uses rect width/height)
-    const cssDist = (p1, p2) => Math.hypot(p2.x - p1.x, p2.y - p1.y);
-
-    /* Geometry */
-    const segDistCanvas = (p, s) => {          // point-to-segment (canvas space)
-      const vx=s.x2-s.x1, vy=s.y2-s.y1, wx=p.x-s.x1, wy=p.y-s.y1;
-      const c1=vx*wx+vy*wy; if(c1<=0) return Math.hypot(wx,wy);
-      const c2=vx*vx+vy*vy; if(c2<=c1) return Math.hypot(p.x-s.x2,p.y-s.y2);
-      const b=c1/c2, px=s.x1+b*vx, py=s.y1+b*vy;
-      return Math.hypot(p.x-px,p.y-py);
-    };
-    const lenFmt = (px)=>{
+    const segDist=(p,s)=>{const vx=s.x2-s.x1,vy=s.y2-s.y1,wx=p.x-s.x1,wy=p.y-s.y1,c1=vx*wx+vy*wy;
+      if(c1<=0)return Math.hypot(wx,wy);
+      const c2=vx*vx+vy*vy;if(c2<=c1)return Math.hypot(p.x-s.x2,p.y-s.y2);
+      const b=c1/c2,px=s.x1+b*vx,py=s.y1+b*vy;
+      return Math.hypot(p.x-px,p.y-py);};
+    const lenFmt=px=>{
       const s=parseFloat(scaleInput.value);
-      return s && s>0 ? (px*s).toFixed(2)+" "+(unitInput.value.trim()||"?") : px.toFixed(1)+" px";
+      return s&&s>0?(px*s).toFixed(2)+" "+(unitInput.value.trim()||"?"):px.toFixed(1)+" px";
     };
 
-    /* Drawing helpers */
-    const drawLabel = (txt,x,y)=>{
-      ctx.font="500 15px Inter, sans-serif";
-      const pad=4, m=ctx.measureText(txt),
-        asc=m.actualBoundingBoxAscent??12,
-        desc=m.actualBoundingBoxDescent??4, h=asc+desc;
+    const label=(txt,x,y)=>{
+      ctx.font=`500 ${fontSize}px Inter, sans-serif`;
+      const pad=4,m=ctx.measureText(txt),asc=m.actualBoundingBoxAscent??fontSize*0.8,
+        desc=m.actualBoundingBoxDescent??fontSize*0.2,h=asc+desc;
       ctx.fillStyle="rgba(255,255,255,.85)";
       ctx.fillRect(x-pad,y-asc-pad,m.width+pad*2,h+pad*2);
-      ctx.fillStyle=lineColor; ctx.fillText(txt,x,y);
+      ctx.fillStyle=lineColor;ctx.fillText(txt,x,y);
     };
-    const redraw = (preview=null)=>{
+    const redraw=(preview=null)=>{
       ctx.clearRect(0,0,canvas.width,canvas.height);
-      if(img) ctx.drawImage(img,0,0);
-
-      ctx.lineWidth=2; ctx.strokeStyle=lineColor;
+      if(img)ctx.drawImage(img,0,0);
+      ctx.lineWidth=lineWidth;ctx.strokeStyle=lineColor;
       lines.forEach(l=>{
-        ctx.beginPath(); ctx.moveTo(l.x1,l.y1); ctx.lineTo(l.x2,l.y2); ctx.stroke();
-        drawLabel(l.text,l.lx,l.ly);
+        ctx.beginPath();ctx.moveTo(l.x1,l.y1);ctx.lineTo(l.x2,l.y2);ctx.stroke();
+        label(l.text,l.lx,l.ly);if(l.angleText)label(l.angleText,l.ax,l.ay);
       });
-
-      if(isMeasuring && startPoint && preview){
+      if(isMeasuring&&startPoint&&preview){
         ctx.setLineDash([6,4]);
-        ctx.beginPath(); ctx.moveTo(startPoint.x,startPoint.y);
-        ctx.lineTo(preview.x,preview.y); ctx.stroke();
+        ctx.beginPath();ctx.moveTo(startPoint.x,startPoint.y);ctx.lineTo(preview.x,preview.y);ctx.stroke();
         ctx.setLineDash([]);
-        drawLabel(lenFmt(Math.hypot(preview.x-startPoint.x,preview.y-startPoint.y)),
+        label(lenFmt(Math.hypot(preview.x-startPoint.x,preview.y-startPoint.y)),
           preview.x+8,preview.y-8);
       }
     };
 
-    /* Reset when new file chosen */
-    const reset = () => {
-      img=null; startPoint=null; isMeasuring=false; lines.length=0;
-      downloadBtn.disabled=true; canvas.width=canvas.height=0;
+    const sharedPoint=(a,b)=>{
+      const pts=[[a.x1,a.y1],[a.x2,a.y2]];
+      for(const [px,py]of pts){
+        if((Math.abs(px-b.x1)<1&&Math.abs(py-b.y1)<1)||(Math.abs(px-b.x2)<1&&Math.abs(py-b.y2)<1))
+          return{x:px,y:py};
+      }return null;
+    };
+    const angleBetween=(prev,curr)=>{
+      const sp=sharedPoint(prev,curr);if(!sp)return null;
+      const v1=(sp.x===prev.x1&&sp.y===prev.y1)?[prev.x2-prev.x1,prev.y2-prev.y1]:
+        [prev.x1-prev.x2,prev.y1-prev.y2];
+      const v2=(sp.x===curr.x1&&sp.y===curr.y1)?[curr.x2-curr.x1,curr.y2-curr.y1]:
+        [curr.x1-curr.x2,curr.y1-curr.y2];
+      const ang=Math.acos((v1[0]*v2[0]+v1[1]*v2[1])/(Math.hypot(...v1)*Math.hypot(...v2)))*180/Math.PI;
+      return{deg:+((ang>180?360-ang:ang).toFixed(1)),x:sp.x,y:sp.y};
     };
 
-    /* Load image */
-    fileInput.addEventListener("change", e=>{
-      const file=e.target.files[0]; if(!file) return;
-      reset();
-      const reader=new FileReader();
-      reader.onload = ev=>{
+    const reset=()=>{img=null;startPoint=null;isMeasuring=false;lines.length=0;
+      downloadBtn.disabled=true;canvas.width=canvas.height=0;};
+    fileInput.addEventListener("change",e=>{
+      const f=e.target.files[0];if(!f)return;reset();
+      const r=new FileReader();
+      r.onload=ev=>{
         img=new Image();
-        img.onload=()=>{
-          canvas.width=img.width;
-          canvas.height=img.height;
-          downloadBtn.disabled=false;
-          redraw();
-        };
-        img.src=ev.target.result;
-      };
-      reader.readAsDataURL(file);
+        img.onload=()=>{canvas.width=img.width;canvas.height=img.height;
+          downloadBtn.disabled=false;redraw();};
+        img.src=ev.target.result;};
+      r.readAsDataURL(f);
     });
 
-    /* Canvas interactions */
-    const move = e => isMeasuring && redraw(toCanvas(e));
-
-    canvas.addEventListener("mousedown", e=>{
-      if(!img) return;
-
-      const clickCanvas   = toCanvas(e);                  // internal coords
-      const clickDisplay  = {                             // css coords for hit-test
-        x:e.clientX - canvas.getBoundingClientRect().left,
-        y:e.clientY - canvas.getBoundingClientRect().top
-      };
-
-      /* Deletion test — use display-space tolerance */
-      const hitScale = canvas.width / canvas.clientWidth; // convert tolerance
-      for(let i=0;i<lines.length;i++){
-        if(segDistCanvas(clickCanvas,lines[i]) <= HIT*hitScale){
-          lines.splice(i,1); redraw(); return;
+    const move=e=>isMeasuring&&redraw(toCanvas(e));
+    canvas.addEventListener("mousedown",e=>{
+      if(!img)return;
+      const p=toCanvas(e);
+      if(!isMeasuring){
+        const hitScale=canvas.width/canvas.clientWidth;
+        for(let i=0;i<lines.length;i++){
+          if(segDist(p,lines[i])<=HIT*hitScale){lines.splice(i,1);redraw();return;}
         }
       }
-
-      /* Measuring logic */
       if(!isMeasuring){
-        startPoint = clickCanvas; isMeasuring=true; canvas.addEventListener("mousemove",move);
+        startPoint=p;isMeasuring=true;canvas.addEventListener("mousemove",move);
       }else{
-        const length = Math.hypot(clickCanvas.x-startPoint.x, clickCanvas.y-startPoint.y);
-        lines.push({
-          x1:startPoint.x, y1:startPoint.y, x2:clickCanvas.x, y2:clickCanvas.y,
-          text:lenFmt(length),
-          lx:(startPoint.x+clickCanvas.x)/2,
-          ly:(startPoint.y+clickCanvas.y)/2
-        });
-        if(e.shiftKey){ startPoint = clickCanvas; redraw(); }
-        else{ isMeasuring=false; startPoint=null; canvas.removeEventListener("mousemove",move); redraw(); }
+        const len=Math.hypot(p.x-startPoint.x,p.y-startPoint.y);
+        const nl={x1:startPoint.x,y1:startPoint.y,x2:p.x,y2:p.y,
+          text:lenFmt(len),lx:(startPoint.x+p.x)/2,ly:(startPoint.y+p.y)/2};
+        lines.push(nl);
+        if(e.ctrlKey&&lines.length>=2){
+          const ang=angleBetween(lines[lines.length-2],nl);
+          if(ang){nl.angleText=ang.deg+"°";nl.ax=ang.x+10;nl.ay=ang.y-10;}
+        }
+        if(e.shiftKey){startPoint=p;redraw();}
+        else{isMeasuring=false;startPoint=null;canvas.removeEventListener("mousemove",move);redraw();}
       }
     });
 
-    /* Inputs: update labels / colour */
-    const refreshLabels = ()=>{
-      lines.forEach(l=>{
-        l.text=lenFmt(Math.hypot(l.x2-l.x1,l.y2-l.y1));
-      });
-      redraw();
-    };
+    const refreshLabels=()=>{lines.forEach(l=>l.text=lenFmt(Math.hypot(l.x2-l.x1,l.y2-l.y1)));redraw();};
     scaleInput.addEventListener("input",refreshLabels);
     unitInput .addEventListener("input",refreshLabels);
-    colorInput.addEventListener("input",()=>{ lineColor=colorInput.value; redraw(); });
+    widthInput.addEventListener("input",()=>{
+      lineWidth=Math.max(1,parseInt(widthInput.value,10)||1);redraw();});
+    fontInput .addEventListener("input",()=>{
+      fontSize=Math.max(6,parseInt(fontInput.value,10)||6);redraw();});
+    colorInput.addEventListener("input",()=>{lineColor=colorInput.value;redraw();});
 
-    /* Download */
     downloadBtn.addEventListener("click",()=>{
-      if(!img) return;
-      redraw();                                // ensure up-to-date
+      if(!img)return;redraw();
       const a=document.createElement("a");
       a.download="measurements.png";
       a.href=canvas.toDataURL("image/png");
