--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Image Measurer</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
