Update info with how to calculate Units/pixel

--- a/index.html
+++ b/index.html
@@ -106,10 +106,18 @@
         <h1>Info</h1>
         <ul>
             <li>Click once to start measuring; move to preview, click again to finish.</li>
+            <li>How to calculate <strong>Units / pixel</strong>:
+                <ul>
+                    <li>Measure a known length in the image (e.g., the deck length) to get the number of pixels.</li>
+                    <li>Measure the same length in real life (using your preferred unit).</li>
+                    <li>Divide the real-life length by the pixel length: <br><strong>Units / pixel = Real-life length ÷ Pixel length</strong></li>
+                    <li>Enter this value in the <strong>Units / pixel</strong> box above.</li>
+                </ul>
+            </li>
             <li>Hold <kbd>Shift</kbd> while finishing a line to chain measurements.</li>
             <li>Hold <kbd>Ctrl</kbd> while finishing a line to show the interior angle to the previous line.</li>
             <li>Click an existing line to delete it.</li>
-            <li>Lengths show in pixels unless you specify a scale &amp; unit label.</li>
+            <li>Lengths show in pixels unless you specify <strong>Units / pixel</strong>.</li>
         </ul>
     </div>
 
